Update ProGuardCORE dependency version to 8.0.1